--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
         <div class="subtitle">For You</div>
         
         <div class="greetings">
-            Maxine
+            Amore
         </div>
         
         <div class="description">
